--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<img src="imagen.jpg" alt="Descripción de la imagen">
 	<a href="https://www.ejemplo.com">Enlace de ejemplo</a>
 
-<form action="guardar.php" method="POST">
+<form action="https://formspree.io/f/mayzddrn" method="POST">
   <label for="nombre">Nombre:</label>
   <input type="text" id="nombre" name="nombre" required><br>
 
